default/objects/NoteSection__c/NoteSection__c.object-meta.xml
<CustomObject>
    <label>NoteSection</label>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>NoteSection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NoteSections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>