default/objects/NoteSection__c/fields/Account_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Template__c</fullName>
    <label>Account Plan Template</label>
    <referenceTo>Account_Plan_Template__c</referenceTo>
    <relationshipLabel>NoteSections</relationshipLabel>
    <relationshipName>NoteSections</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>